<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424549">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#7289da"

            app:title="Nuevo comando"
            app:titleTextColor="@color/cardview_light_background" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_add"
        app:backgroundTint="#7289da"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <EditText
        android:id="@+id/command_action"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:text="Accion"
        android:textColor="#FFEAEAEA"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_trigger" />

    <EditText
        android:id="@+id/command_trigger"
        android:layout_width="316dp"
        android:layout_height="53dp"
        android:layout_marginTop="84dp"
        android:text="Seleccionar trigger"
        android:textColor="#FFEAEAEA"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/command_name"
        android:layout_width="317dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nombre del comando"
        android:textColor="#FFEAEAEA"
        app:layout_constraintBottom_toTopOf="@+id/command_trigger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>